<resources>
    <string name="app_name">Spieler</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_text"><u>Register</u></string>
    <string name="login_text"><u>Login</u></string>
    <string name="register_text_button">Register</string>
    <string name="login_text_button">Login</string>
    <string name="first_name_hint">Username</string>
    <string name="last_name_hint">Last Name</string>
    <string name="add_blog">Add Blog</string>
    <string name="add_note_btn">Add blog</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="repassword_hint">Re enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_post_or_blog">Upload post or blog</string>
</resources>