<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_theme_color"
        tools:context=".ui.signup.SignUpFragment">

        <ImageView
            android:id="@+id/userProfilePic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="@+id/signUpInnerCL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addProfilePic"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/search_field_bg"
            android:elevation="40dp"
            android:padding="0dp"
            android:src="@drawable/ic_baseline_add_24"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/userProfilePic"
            app:layout_constraintEnd_toEndOf="@+id/userProfilePic" />

        <TextView
            android:id="@+id/textView"
            style="@style/heading_style"
            android:text="Join Korg in the Revolution!"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signUpInnerCL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toStartOf="@+id/signUpInnerCL"
            app:layout_constraintTop_toBottomOf="@+id/userProfilePic"
            app:layout_constraintVertical_bias="0.653" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpInnerCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/credential_page_bg"
            android:elevation="80dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/signup_fnameETv"
                style="@style/login_edit_tv"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/signup_emailEtv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/signup_emailEtv"
                style="@style/login_edit_tv"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/signup_passwordEtv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/signup_passwordEtv"
                style="@style/login_edit_tv"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/signup_rePasswordEtv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/signup_rePasswordEtv"
                style="@style/login_edit_tv"
                android:layout_marginBottom="20dp"
                android:hint="@string/repassword_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/signup_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="321dp" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/credential_page_button"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/register_text_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn">

                <TextView
                    style="@style/navigation_text"
                    android:text="Already have an account?" />

                <TextView
                    android:id="@+id/login_navigation_txt"
                    style="@style/navigation_text"
                    android:layout_marginStart="5dp"
                    android:text="@string/login_text"
                    android:textColor="@color/main_theme_color"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>