<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_theme_color"
        tools:context=".ui.login.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/credential_page_bg"
            android:elevation="80dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/login_emailTv"
                style="@style/login_edit_tv"
                android:layout_marginBottom="30dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/login_passwordTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_passwordTv"
                style="@style/login_edit_tv"
                android:layout_marginBottom="30dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/login_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/credential_page_button"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/login_text_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/navText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn">

                <TextView
                    style="@style/navigation_text"
                    android:text="New here?" />

                <TextView
                    android:id="@+id/signup_nav_btn"
                    style="@style/navigation_text"
                    android:layout_marginStart="5dp"
                    android:text="@string/register_text"
                    android:textColor="@color/main_theme_color"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/heading_style"
            android:layout_marginBottom="20dp"
            android:text="You should login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/innerCL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>